{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 8,
  "lineage": "6a69bbe8-e488-a6fd-fb3c-bdf29d31f1bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aa761682283b4cc8",
            "arn": "arn:aws:ec2:ap-south-1:686566045091:instance/i-014078537451ba99d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014078537451ba99d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-097e1ff73c2299543"
              }
            ],
            "primary_network_interface_id": "eni-097e1ff73c2299543",
            "private_dns": "ip-10-10-1-243.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.243",
            "public_ip": "15.207.109.63",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0025dfc86c4ac861b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-055b04e935365f27b",
            "tags": {
              "Name": "Terraform-Q3-EC2"
            },
            "tags_all": {
              "Name": "Terraform-Q3-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b63c0f985fe353a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686566045091",
            "id": "i-014078537451ba99d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686566045091:internet-gateway/igw-0086f04b175acc83f",
            "id": "igw-0086f04b175acc83f",
            "owner_id": "686566045091",
            "region": "ap-south-1",
            "tags": {
              "Name": "Terraform-Q3-IGW"
            },
            "tags_all": {
              "Name": "Terraform-Q3-IGW"
            },
            "vpc_id": "vpc-0454f8a58ffd5f6bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686566045091",
            "id": "igw-0086f04b175acc83f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686566045091:route-table/rtb-05ab4f07431e40d25",
            "id": "rtb-05ab4f07431e40d25",
            "owner_id": "686566045091",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0086f04b175acc83f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-Q3-RT"
            },
            "tags_all": {
              "Name": "Terraform-Q3-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454f8a58ffd5f6bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686566045091",
            "id": "rtb-05ab4f07431e40d25",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00572d4907c9671fb",
            "region": "ap-south-1",
            "route_table_id": "rtb-05ab4f07431e40d25",
            "subnet_id": "subnet-055b04e935365f27b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686566045091",
            "id": "rtbassoc-00572d4907c9671fb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686566045091:security-group/sg-06b63c0f985fe353a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b63c0f985fe353a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-q3-sg",
            "name_prefix": "",
            "owner_id": "686566045091",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-Q3-SG"
            },
            "tags_all": {
              "Name": "Terraform-Q3-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454f8a58ffd5f6bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686566045091",
            "id": "sg-06b63c0f985fe353a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686566045091:subnet/subnet-055b04e935365f27b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055b04e935365f27b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686566045091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Terraform-Q3-Public"
            },
            "tags_all": {
              "Name": "Terraform-Q3-Public"
            },
            "vpc_id": "vpc-0454f8a58ffd5f6bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686566045091",
            "id": "subnet-055b04e935365f27b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:686566045091:vpc/vpc-0454f8a58ffd5f6bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0382d1ae9a11b0632",
            "default_route_table_id": "rtb-0f257c3f99171311b",
            "default_security_group_id": "sg-0ee61ee465b1fc676",
            "dhcp_options_id": "dopt-004006d61bf4d3f17",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0454f8a58ffd5f6bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f257c3f99171311b",
            "owner_id": "686566045091",
            "region": "ap-south-1",
            "tags": {
              "Name": "Terraform-Q3-VPC"
            },
            "tags_all": {
              "Name": "Terraform-Q3-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686566045091",
            "id": "vpc-0454f8a58ffd5f6bd",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}